# distribution-optimization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
R/: distribution_optimization.R  optimize_hyperparams.R
data/: atmosphere_data.csv  mixture3.csv  pain_free_steps.csv  synthetic_1.csv  synthetic_2.csv  synthetic_3.csv  synthetic_5.csv  textbook_1k.csv  truck_driving_data.csv
distribution_optimization_py/: compare_results.py  constrained_landscape_analysis.py  cs_results_alfa001.csv  cs_results_alfa01.csv  cs_results_alfa025.csv  cs_results_alfa05.csv  cs_results_alfa1.csv  cs_results_latest.csv  cs_results_original.csv  datasets.py  ga_style_operators.py  gaussian_mixture.py  initialize.py  plot.ipynb  plot.py  plot_binning_scheme_difference.py  problem.py  problem_with_gradient.py  scale.py  synthetic_datasets.py  utils.py
distribution_optimization_py/.ipynb_checkpoints/: plot-checkpoint.ipynb
distribution_optimization_py/data/: chromatogram_time.csv  iris_ica.csv
distribution_optimization_py/evaluator/: __main__.py  evaluator.py  problem_wrapper.py
distribution_optimization_py/experiment/: __main__.py  method.py  plot.py
distribution_optimization_py/pyade/: commons.py  de.py  ilshade.py  jade.py  lshade.py  shade.py
distribution_optimization_py/solver/: __init__.py  __main__.py  cma_es.py  cs.py  de.py  em.py  ga.py  hms.py  plot.py  protocol.py  sa.py
experiments/: cma_es.ipynb  cma_es_bipop.ipynb  compare_solutions.ipynb  constrained_landscape_analysis.ipynb  create_datasets.ipynb  datasets.py  ela_analysis.ipynb  ela_features.csv  ela_features_improved.csv  ga.ipynb  gaussian_ela_features.csv  hms_scaled.ipynb  ilshade.ipynb  mixture_parameters.csv  problem_with_bins.ipynb  save_ela_features.py
experiments/benchmark_3/: mixture_data_0.csv  mixture_data_1.csv  mixture_data_10.csv  mixture_data_11.csv  mixture_data_12.csv  mixture_data_13.csv  mixture_data_14.csv  mixture_data_15.csv  mixture_data_16.csv  mixture_data_17.csv  mixture_data_18.csv  mixture_data_19.csv  mixture_data_2.csv  mixture_data_20.csv  mixture_data_21.csv  mixture_data_22.csv  mixture_data_23.csv  mixture_data_24.csv  mixture_data_25.csv  mixture_data_26.csv  mixture_data_27.csv  mixture_data_28.csv  mixture_data_29.csv  mixture_data_3.csv  mixture_data_30.csv  mixture_data_31.csv  mixture_data_32.csv  mixture_data_33.csv  mixture_data_34.csv  mixture_data_35.csv  mixture_data_36.csv  mixture_data_37.csv  mixture_data_38.csv  mixture_data_39.csv  mixture_data_4.csv  mixture_data_40.csv  mixture_data_41.csv  mixture_data_42.csv  mixture_data_43.csv  mixture_data_44.csv  (+13 more)
experiments/benchmark_4/: mixture_data_0.csv  mixture_data_1.csv  mixture_data_10.csv  mixture_data_11.csv  mixture_data_12.csv  mixture_data_13.csv  mixture_data_14.csv  mixture_data_15.csv  mixture_data_16.csv  mixture_data_17.csv  mixture_data_18.csv  mixture_data_19.csv  mixture_data_2.csv  mixture_data_20.csv  mixture_data_21.csv  mixture_data_22.csv  (+37 more)
images/: algorithm_win_matrix.eps  bin_comparison.eps  bins_comparison.eps  bins_comparison_multiple_runs.eps  comparison_plot.eps  js_analysis.eps  js_analysis_difficult.eps  optimization_methods_analysis.eps
scripts/: optuna_cma_es_bipop_chromatogram_time.py  optuna_de_ilshade_chromatogram_time.py  optuna_hms_chromatogram_time.py  optuna_scaled_chromatogram_time.py
tests/: conftest.py  test_gaussian_mixture.py  test_problem.py  test_scale.py
(+2021 files in other folders)
