[tool.poetry]
name = "distribution_optimization_py"
version = "0.1.0"
description = ""
authors = ["Wojciech Achtelik <wachtelik@agh.edu.pl>"]
license = "MIT"
readme = "README.md"
keywords = ["DistributionOptimization", "optimization", "HMS"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Other Audience",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.24.3"
scipy = "1.10.1"
pyhms = {git = "https://github.com/maciejsmolka/pyhms.git"}
matplotlib = "^3.8.3"
pyade-python = "^1.1"


[tool.poetry.group.dev.dependencies]
pandas = "2.0.0"
ipykernel = "^6.29.0"
pytest = "^8.0.1"
pre-commit = "^3.6.2"
optuna = "^3.5.0"
optuna-dashboard = "^0.14.0"
scikit-learn = "1.2.2"
pytest-cov = "^4.1.0"
pflacco = "^1.2.2"
ioh = "^0.3.14"
umap-learn = "^0.5.5"
plotly = "^5.19.0"
nbformat = "^5.9.2"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
